k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-qa
  labels:
    app: demo
    instance: qa
