k8s/maintenance.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-qa-maintenance
  namespace: demo-qa
  labels:
    app: demo
    stage: qa
    component: maintenance
spec:
  selector:
    matchLabels:
      app: demo
      stage: qa
      component: maintenance
  template:
    metadata:
      labels:
        app: demo
        stage: qa
        component: maintenance
    spec:
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
      - name: config
        configMap:
          name: demo-qa-maintenance-config
      - name: content
        configMap:
          name: demo-qa-maintenance-content
      - name: ooo-content
        configMap:
          name: demo-qa-maintenance-ooo-content
      containers:
      - name: demo-qa
        image: nginx:stable
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-config
        - mountPath: /etc/nginx/conf.d
          name: config
        - mountPath: /usr/share/nginx/html
          name: ooo-content
        - mountPath: /usr/share/nginx/html2/maintenance-override
          name: content
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-qa-maintenance
  namespace: demo-qa
  labels:
    app: demo
    stage: qa
    component: maintenance
spec:
  selector:
    app: demo
    stage: qa
    component: maintenance
  ports:
  - port: 80
    targetPort: http
