k8s/www.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-qa-www
  namespace: demo-qa
  labels:
    app: demo
    stage: qa
    component: www
spec:
  selector:
    matchLabels:
      app: demo
      stage: qa
      component: www
  template:
    metadata:
      labels:
        app: demo
        stage: qa
        component: www
    spec:
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
      - name: config
        configMap:
          name: demo-qa-www-config
      - name: root-content
        configMap:
          name: demo-qa-www-root-content
      - name: api-content
        configMap:
          name: demo-qa-www-api-content
      containers:
      - name: demo-qa
        image: nginx:stable
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-config
        - mountPath: /etc/nginx/conf.d
          name: config
        - mountPath: /usr/share/nginx/html
          name: root-content
        - mountPath: /usr/share/nginx/html/api
          name: api-content
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-qa-www
  namespace: demo-qa
  labels:
    app: demo
    stage: qa
    component: www
spec:
  selector:
    app: demo
    stage: qa
    component: www
  ports:
  - port: 80
    targetPort: http
